# srinivas.gs_new

./: .gitignore  .gitlab-ci.yml  404.html  Makefile  README.md  README2.md  a9mzgWJ_P7L3dO7hogYcVIM3VnVPeLi8hD1KdEVRYzo  encrypt.md  footer.html  header.html  index.html  make.py  pyproject.toml  python.md  talks.htm
.github/workflows/: main.yaml
.well-known/acme-challenge/: gKqmVTmCXPV3dmtER_a5_pbH0SFgKLB1wRKJQboa-qE.html
.well-known/test/: index.html
apps/quiz/: index.html
apps/vocab/: index.html
assets/: xolotl.webm
css/: css.css  css404.css  star-books.css  star-bs.css  star-phone.css  star-photo.css  star.css
datasheet/: README.md  index.html
essays/books/: header.html  index.html
essays/children/: index.html
essays/kissinger/: header.html  index.html
essays/swartz/: index.html
lists/: python.md  youtube.md
lists/python/: index.html  index.json
lists/youtube/: index.html
papers/: README.md  header.html  index.html
photography/adk/: index.html
photography/banff/: index.html
photography/delhi/: index.html
photography/redwoods/: index.html
photography/spiders/: index.html
portfolio/: index.html  index.json
portfolio/places-i-have-lived/: index.html  index.json
publications/: index.html
quotes/: README.md  footer.html  header.html  index.html
src/: make.py  make_python_lists.py  make_youtube_list.py  portfolio.py  render_readmes.py  utils.py
talks/: README.md  footer.html  header.html  index.html
templates/: card-image-cap-list.html  card-no-img.html  card.html  masonry.html  portfolio.html
